# Learn-Physics-Haskell

./: .envrc  .gitignore  CHANGELOG.md  Learn-Physics-Haskell.cabal  cabal.project  shell.nix
src/Chapter10/: Exercises.hs
src/Chapter11/: Exercises.hs
src/Chapter12/: Exercises  Exercises.hi  Exercises.hs
src/Chapter13/: Chapter13.cabal  Exercise1.hs  Exercise10.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  GlossAnimate.hs  GlossDisplay.hs  GlossDisplay2.hs  GlossSimulate.hs  GlossSimulate2.hs  VisAnimate.hs  VisDisplay.hs  VisDisplay2.hs  VisDisplay3.hs  VisSimulate.hs
src/Chapter14/: Exercises.hs
src/Chapter2/: Exercises.hs  First.hs
src/Chapter3/: Exercises.hs
src/Chapter4/: Exercises.hs
src/Chapter5/: Exercises.hs
src/Chapter6/: Exercises.hs
src/Chapter7/: Exercises.hs
src/Chapter8/: Exercises.hs
src/Chapter9/: Exercises.hs
