cabal-version:      3.0
name:               Learn-Physics-Haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cully-Curwen
maintainer:         c.t.g.curwen@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Chapter2.First
                    , Chapter2.Exercises
                    , Chapter3.Exercises
                    , Chapter4.Exercises
                    , Chapter5.Exercises
                    , Chapter6.Exercises
                    , Chapter7.Exercises
                    , Chapter8.Exercises
                    , Chapter9.Exercises
                    , Chapter10.Exercises
                    , Chapter11.Exercises
                    -- , Chapter13.Exercises
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , gnuplot ^>=0.5.7
                    , LPFP-core ^>= 1.1.5
    hs-source-dirs:   src
    default-language: Haskell2010

executable Learn-Physics-Haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0,
        Learn-Physics-Haskell

    hs-source-dirs:   app
    default-language: Haskell2010

executable Chapter13-GlossDisplay
    import:           warnings
    main-is:          Chapter13/GlossDisplay.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , gloss
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-GlossDisplay2
    import:           warnings
    main-is:          Chapter13/GlossDisplay2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , gloss
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-GlossAnimate
    import:           warnings
    main-is:          Chapter13/GlossAnimate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , gloss
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-GlossSimulate
    import:           warnings
    main-is:          Chapter13/GlossSimulate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , gloss
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-GlossSimulate2
    import:           warnings
    main-is:          Chapter13/GlossSimulate2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , gloss
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-VisDisplay
    import:           warnings
    main-is:          Chapter13/VisDisplay.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , not-gloss
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-VisDisplay2
    import:           warnings
    main-is:          Chapter13/VisDisplay2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , not-gloss
                    , linear
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-VisDisplay3
    import:           warnings
    main-is:          Chapter13/VisDisplay3.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , not-gloss
                    , linear
                    , spatial-math
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-VisAnimate
    import:           warnings
    main-is:          Chapter13/VisAnimate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , not-gloss
                    , spatial-math
    hs-source-dirs:   src
    default-language: Haskell2010

executable Chapter13-VisSimulate
    import:           warnings
    main-is:          Chapter13/VisSimulate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , Learn-Physics-Haskell
                    , not-gloss
    hs-source-dirs:   src
    default-language: Haskell2010

