cabal-version:      3.0
name:               Chapter13
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cully-Curwen
maintainer:         c.t.g.curwen@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable GlossDisplay
    import:           warnings
    main-is:          GlossDisplay.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , gloss
    hs-source-dirs:   .
    default-language: Haskell2010

executable GlossDisplay2
    import:           warnings
    main-is:          GlossDisplay2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , gloss
    hs-source-dirs:   .
    default-language: Haskell2010

executable GlossAnimate
    import:           warnings
    main-is:          GlossAnimate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , gloss
    hs-source-dirs:   .
    default-language: Haskell2010

executable GlossSimulate
    import:           warnings
    main-is:          GlossSimulate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , gloss
    hs-source-dirs:   .
    default-language: Haskell2010

executable GlossSimulate2
    import:           warnings
    main-is:          GlossSimulate2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , gloss
    hs-source-dirs:   .
    default-language: Haskell2010

executable VisDisplay
    import:           warnings
    main-is:          VisDisplay.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , not-gloss
    hs-source-dirs:   .
    default-language: Haskell2010

executable VisDisplay2
    import:           warnings
    main-is:          VisDisplay2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , not-gloss
                    , linear
    hs-source-dirs:   .
    default-language: Haskell2010

executable VisDisplay3
    import:           warnings
    main-is:          VisDisplay3.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , not-gloss
                    , linear
                    , spatial-math
    hs-source-dirs:   .
    default-language: Haskell2010

executable VisAnimate
    import:           warnings
    main-is:          VisAnimate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , not-gloss
                    , spatial-math
    hs-source-dirs:   .
    default-language: Haskell2010

executable VisSimulate
    import:           warnings
    main-is:          VisSimulate.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , not-gloss
    hs-source-dirs:   .
    default-language: Haskell2010

